--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             </menu>
             <div id="content">
                 <div class="icon-sign" id="icon-dot" onclick="goUp()">:::</div>
-                <div style="float:right">
+                <div style="float:right" class="right-index">
                 <div class="icon-sign" id="firstpage"><a href="https://www.t-sports.ntpc.gov.tw/">首頁</a></div>
                     <a href="#">>>場館介紹>></a>
                     <a href="#">樹林場區>></a>
