--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </div>
             </menu>
             <div id="content">
-                <div class="icon-sign" id="icon-dot" onclick="goUp()">:::</div>
+                <div class="icon-sign" id="icon-dot" onclick="goUp()"></div>
                 <div style="float:right" class="right-index">
                 <div class="icon-sign" id="firstpage"><a href="https://www.t-sports.ntpc.gov.tw/">首頁</a></div>
                     <a href="#">>>場館介紹>></a>
